# Task

./: .gitignore  main.cpp  meson.build
Activity/: meson.build
Activity/Header/: Activity.hpp
Activity/Source/: Activity.cpp
Person/: meson.build
Person/Header/: Person.hpp
Person/Source/: Person.cpp
Test/: meson.build
Test/Source/: PersonTest.cpp
builddir/: .ninja_log  tusk
builddir/Test/: task_test
builddir/meson-info/: intro-buildsystem_files.json  intro-dependencies.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
